k8s/ciss-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciss-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciss-server
  template:
    metadata:
      labels:
        app: ciss-server
    spec:
      containers:
      - name: ciss-server
        image: ciss-server:latest
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: ciss-server
spec:
  selector:
    app: ciss-server
  ports:
  - port: 8085
    targetPort: 8085
